# semanticapi-engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  custom_provider.py
providers/: airtable.json  alpha-vantage.json  amazon-sp-api.json  amplitude.json  anthropic.json  anyscale.json  apify.json  asana.json  assemblyai.json  aws-lambda.json  aws-ses.json  aws-sns.json  bandwidth.json  baseten.json  bigcommerce.json  bing-search.json  box.json  braintree.json  brave-search.json  brevo.json  browserless.json  calendly.json  chargebee.json  circleci.json  clicksend.json  clickup.json  cloudflare.json  cloudinary.json  cockroachdb.json  cohere.json  coinbase.json  coingecko.json  crawlbase.json  datadog.json  deepgram.json  devto.json  diffbot.json  digitalocean.json  discord.json  docker-hub.json  (+123 more)
semanticapi/: __init__.py  api_registry.py  engine.py  intent_parser.py  processor.py  provider_loader.py  schema_transformer.py  server.py  x402.py
tests/: test_intent_parser.py  test_provider_loader.py
